Add button for closing the course sidebar
This commit adds a button to the course sidebar that closes it. When
closed, the sidebar can be reopened by clicking a bar that appears on
the left side of the screen. The state of the sidebar is stored in
localStorage, so it will remain closed upon navigation. This feature
improves the user experience especially on small displays and in views
that display a lot of information horizontally (e.g. the new assessment
view).

Related to #831

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -981,6 +981,14 @@ msgid "COURSE_ARCHIVE"
 msgstr "Course archive"
 
 #: course/templates/course/course_base.html
+msgid "OPEN_SIDEBAR"
+msgstr "Open sidebar"
+
+#: course/templates/course/course_base.html
+msgid "CLOSE_SIDEBAR"
+msgstr "Close sidebar"
+
+#: course/templates/course/course_base.html
 msgid "READ_MORE"
 msgstr "Read more"
 
