--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-29 14:44+0300\n"
+"POT-Creation-Date: 2021-11-01 14:59+0200\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -3422,6 +3422,10 @@ msgstr "Not assessed manually"
 #: exercise/templates/exercise/staff/_resubmit_modal.html
 msgid "REGRADE"
 msgstr "Regrade"
+
+#: exercise/templates/exercise/staff/_assessment_panel.html
+msgid "HELP"
+msgstr "Help"
 
 #: exercise/templates/exercise/staff/_assessment_panel.html
 msgid "ASSESSMENT"
