--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-01 14:59+0200\n"
+"POT-Creation-Date: 2021-11-02 11:04+0200\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -2096,7 +2096,6 @@ msgid "EDIT_COURSE_INDEX"
 msgstr "Edit course front page"
 
 #: edit_course/templates/edit_course/edit_instance.html
-#: exercise/templates/exercise/staff/_assessment_panel.html
 msgid "DETAILS"
 msgstr "Details"
 
@@ -3419,17 +3418,22 @@ msgid "NOT_ASSESSED_MANUALLY"
 msgstr "Not assessed manually"
 
 #: exercise/templates/exercise/staff/_assessment_panel.html
+#: exercise/templates/exercise/staff/_submission_data_modal.html
+msgid "SUBMISSION_DETAILS"
+msgstr "Submission details"
+
+#: exercise/templates/exercise/staff/_assessment_panel.html
 #: exercise/templates/exercise/staff/_resubmit_modal.html
-msgid "REGRADE"
-msgstr "Regrade"
+msgid "REGRADE_AUTOMATICALLY"
+msgstr "Regrade automatically"
 
 #: exercise/templates/exercise/staff/_assessment_panel.html
 msgid "HELP"
 msgstr "Help"
 
 #: exercise/templates/exercise/staff/_assessment_panel.html
-msgid "ASSESSMENT"
-msgstr "Assessment"
+msgid "ASSESS_MANUALLY"
+msgstr "Assess manually"
 
 #: exercise/templates/exercise/staff/_assessment_panel.html
 #: exercise/templates/exercise/staff/_resubmit_modal.html
@@ -3464,10 +3468,6 @@ msgstr ""
 "behaved incorrectly so that the grading data is incorrect or the status of "
 "the submission never became ready. Caution! Re-submitting overwrites the "
 "current grading data. "
-
-#: exercise/templates/exercise/staff/_submission_data_modal.html
-msgid "SUBMISSION_DETAILS"
-msgstr "Submission details"
 
 #: exercise/templates/exercise/staff/_submission_data_modal.html
 msgid "SUBMITTED_VALUES"
@@ -3678,8 +3678,8 @@ msgid "NOTE_LATER_SUBMISSIONS"
 msgstr "There are newer submissions submitted by this student."
 
 #: exercise/templates/exercise/staff/inspect_submission.html
-msgid "NEXT_UNASSESSED_SUBMITTER"
-msgstr "Next unassessed submitter"
+msgid "ASSESS_NEXT_SUBMITTER_MANUALLY"
+msgstr "Assess next submitter manually"
 
 #: exercise/templates/exercise/staff/inspect_submission.html
 msgid "ADD_ONE_EXTRA_SUBMISSION_FOR_STUDENT_IN_EXERCISE"
