Add button to regrade multiple submissions at once
The "Regrade" button that regrades either all submissions, or
just incomplete submissions. Because regrading make take much
time, it is done as asynchronous Celery task. For the moment
this is considered an experimental feature (e.g. the UI needs
improving), so therefore limiting the access to admins.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -2659,6 +2659,10 @@ msgstr ""
 "Select which submission determines the final grade for this assignment."
 
 #: exercise/exercise_models.py
+msgid "LABEL_REGRADE_TASK"
+msgstr "Identifier to regrade task in Celery"
+
+#: exercise/exercise_models.py
 msgid "MODEL_NAME_BASE_EXERCISE"
 msgstr "base assignment"
 
