--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-05 11:06+0200\n"
+"POT-Creation-Date: 2021-11-05 15:45+0200\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -1175,7 +1175,6 @@ msgstr "Confirm group removal"
 
 #: course/templates/course/staff/group_delete.html
 #: course/templates/course/staff/groups.html
-#: exercise/templates/exercise/staff/_submissions_table_compact.html
 msgid "ID"
 msgstr "ID"
 
@@ -3548,6 +3547,10 @@ msgstr "Late <small>-%(percent)s%%</small>"
 #: exercise/templates/exercise/staff/_submissions_table.html
 msgid "NO_SUBMISSIONS"
 msgstr "No submissions"
+
+#: exercise/templates/exercise/staff/_submissions_table_compact.html
+msgid "NUMBER_ABBREVIATED"
+msgstr "No."
 
 #: exercise/templates/exercise/staff/_submissions_table_compact.html
 msgid "SUBMISSION_FINAL_TOOLTIP"
