--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-05 11:06+0200\n"
+"POT-Creation-Date: 2021-11-05 15:45+0200\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -1180,7 +1180,6 @@ msgstr "Vahvista ryhmän poisto"
 
 #: course/templates/course/staff/group_delete.html
 #: course/templates/course/staff/groups.html
-#: exercise/templates/exercise/staff/_submissions_table_compact.html
 msgid "ID"
 msgstr "ID"
 
@@ -3553,6 +3552,10 @@ msgstr "Myöhässä <small>-%(percent)s%%</small>"
 #: exercise/templates/exercise/staff/_submissions_table.html
 msgid "NO_SUBMISSIONS"
 msgstr "Ei vielä palautuksia"
+
+#: exercise/templates/exercise/staff/_submissions_table_compact.html
+msgid "NUMBER_ABBREVIATED"
+msgstr "Nro"
 
 #: exercise/templates/exercise/staff/_submissions_table_compact.html
 msgid "SUBMISSION_FINAL_TOOLTIP"
