Display deviations in student UI
This commit adds information to the student UI about the deviations
granted to the student. Max submissions deviations are now counted in
places that display a submission counter in the format X/Y where X is
the current number of submissions and Y is the maximum number of
submissions. Deadline deviations are now displayed in the "exercise
info" box on the standalone exercise and submission pages. They are also
displayed in the exercise frame header.

Related to #908

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-05 15:45+0200\n"
+"POT-Creation-Date: 2021-11-17 13:26+0200\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -3111,6 +3111,11 @@ msgstr "Deadline"
 
 #: exercise/templates/exercise/_exercise_info.html
 #: exercise/templates/exercise/exercise_plain.html
+msgid "EXTENDED_DEADLINE"
+msgstr "Extended deadline"
+
+#: exercise/templates/exercise/_exercise_info.html
+#: exercise/templates/exercise/exercise_plain.html
 msgid "LATE_SUBMISSION_DEADLINE"
 msgstr "Late submission deadline"
 
@@ -3380,6 +3385,10 @@ msgid "OPEN_EXERCISE_IN_NEW_TAB"
 msgstr ""
 "Open this assignment in a new tab (recommended for keyboard and assistive "
 "technology users)"
+
+#: exercise/templates/exercise/exercise_plain.html
+msgid "PENALTY_AFTER -- %(penalty)s, %(deadline)s"
+msgstr "-%(penalty)s%% penalty after %(deadline)s"
 
 #: exercise/templates/exercise/exercise_plain.html
 msgid "TO_BE_SUBMITTED_ALONE"
