Option to enable automatic enrollment in Edit Course view
Adds checkbox to Edit Course view where teacher can enable
automatic enrollment from SIS according to periodic schedule
as set in Celery settings. When automatic enrollment is enabled,
local students must enroll through SIS, and are not able to
enrol directly from A+. External students can still enroll normally
from A+.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -595,6 +595,14 @@ msgid "LABEL_SIS_IDENTIFIER"
 msgstr "Course identifier in the student info system"
 
 #: course/models.py
+msgid "LABEL_SIS_ENROLL"
+msgstr "Enrol from SIS"
+
+#: course/models.py
+msgid "COURSE_INSTANCE_SIS_ENROLL_HELP"
+msgstr "When enabled, students from local organization must enrol through SIS."
+
+#: course/models.py
 msgid "MODEL_NAME_COURSE_INSTANCE"
 msgstr "course instance"
 
@@ -958,6 +966,10 @@ msgstr "Edit news"
 #: edit_course/templates/edit_course/edit_course_base.html
 msgid "EDIT_COURSE"
 msgstr "Edit course"
+
+#: course/templates/course/_enroll_form.html
+msgid "ENROLL_THROUGH_SIS"
+msgstr "You must enrol on this course through Student Information System."
 
 #: course/templates/course/_enroll_form.html
 msgid "ENROLL_TO_SUBMIT_EXERCISES"
